--- a/gmg_1/templates/admintemp/base.html
+++ b/gmg_1/templates/admintemp/base.html
@@ -66,6 +66,14 @@
             <li><a href="/edituser/">Edit User</a></li>
           </ul>
         </li>
+         <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Manager <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/addmanager/">Add Manager</a></li>
+            <li><a href="/editmanager/">Edit Manager</a></li>
+            <li><a href="/deletemanager/">Delete Manger</a></li>
+          </ul>
+        </li>
         <li><a href="/logs/">Logs <span class="label label-pill label-danger">{{no}}</span></a></li>
              </ul>
       <ul class="nav navbar-nav navbar-right">
