--- a/gmg_1/templates/attendance/home.html
+++ b/gmg_1/templates/attendance/home.html
@@ -86,6 +86,42 @@
   <div class="panel-body"><font size="5" >   {{eltotal}} </font> </div></div></div>
 </div>
 
+<div class="table-responsive">
+<table class="table table-hover table-bordered">
+  <thead bgcolor="#6ba3ff">
+    <tr>
+  <th>Leave Type</th>
+  <th>Date</th>
+  <th>Reason</th>
+  <th>Status</th>
+  <th>Delete</th>
+    </tr>
+  </thead>
+  <tbody>
+{% for item in monthlyrequest %}
+    <tr >
+      <td class="text-left">{{ item.l_type }}</td>
+      <td class="text-left">{{ item.date1 }}</td>
+      <td class="text-left">{{ item.reason }}</td>
+      {% if item.confirmation == 1 %}
+          <td class="text-left" bgcolor="#6fff4f">Approved</td>
+      {% else %}
+          <td class="text-left" bgcolor="#f6f98e">Pending</td>
+          <td>
+              <form action="/approve_submit/" method="post">
+              {% csrf_token %}
+              <input type="hidden" value="{{ item.l_id }}" name="l_id"/>
+              <input type="submit" class="btn" style="font-size:10pt;color:white;background-color:#16a500;border:2px
+              solid #336600;padding:3px;" value=Delete name="mybtn">
+              </form>
+          </td>
+      {% endif %}
+    </tr>
+  {% endfor %}
+  </tbody>
+</table>
+</div>
+
 
 
 
